# constraint_project

./: CHANGELOG.md  README.md  towers.cabal
app/: Main.hs
app/Parser/: Parser.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.4.7/: package.cache  towers-0.1.0.0-inplace.conf
