cabal-version:      3.0
name:               towers
version:            0.1.0.0
-- synopsis:
-- description:
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             Philipp Breske
maintainer:         philipp.breske@stud.htwk-leipzig.de
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall -XTypeApplications


executable towers
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.17.2.0, hasmtlib>=2.8.0
    hs-source-dirs:   app
    default-language: Haskell2010
